# videomatting

./: .gitignore  .gitmodules  CMakeLists.txt  build_ncnn.bat  build_protobuf.bat  build_windows.bat  downloader.bat
src/: executor.cpp  nanodet.cpp  nanodet.h
